[package]
name = "heightmap"
version = "0.10.2"
authors = ["Isaac <gpg@reheatedcake.io>"]
edition = "2024"
rust-version = "1.88"


[dependencies]
image = { version = "0.25.8", features = ["png"] }
log = "0.4.28"
eframe = { version = "0.33.3", optional = true }
egui = { version = "0.33.3", optional = true }
rfd = { version = "0.15", optional = true }
egui_extras = { version = "0.33.3", features = [
  "file",
  "image",
], optional = true }

# native: full brdb (brz + sqlite-backed brdb), CLI deps, sync dialogs
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
brdb = "0.6.3"
rayon = "1.11.0"
poll-promise = { version = "0.2.0", optional = true }
clap = "2.33.0"
env_logger = "0.10.0"
pollster = { version = "0.4", optional = true }
clipboard-win = { version = "5.4.1", features = [
  "windows-win",
], optional = true }

# web: brz-only brdb with the wasm clock, async dialogs, browser downloads
[target.'cfg(target_arch = "wasm32")'.dependencies]
brdb = { version = "0.6.3", default-features = false, features = [
  "brz",
  "wasm",
] }
poll-promise = { version = "0.2.0", features = ["web"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
  "HtmlCanvasElement",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "HtmlAnchorElement",
  "Document",
  "Window",
], optional = true }

[features]
default = ["gui"]
gui = [
  "egui",
  "eframe",
  "egui_extras",
  "poll-promise",
  "rfd",
  "pollster",
  "clipboard-win",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "web-sys",
  "js-sys",
]
egui = ["dep:egui"]
clipboard-win = ["dep:clipboard-win"]
pollster = ["dep:pollster"]
wasm-bindgen = ["dep:wasm-bindgen"]
wasm-bindgen-futures = ["dep:wasm-bindgen-futures"]
web-sys = ["dep:web-sys"]
js-sys = ["dep:js-sys"]

[[bin]]
name = "heightmap_gui"
path = "src/gui_main.rs"
required-features = ["gui"]
